--- a/src/pixel_warriors/pixelwarriors.fxml
+++ b/src/pixel_warriors/pixelwarriors.fxml
@@ -251,7 +251,7 @@
                               </ImageView>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="statsInvPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0">
+                        <AnchorPane fx:id="statsInvPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" visible="false">
                            <children>
                               <Label cacheShape="false" centerShape="false" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" scaleShape="false">
                                  <graphic>
@@ -793,7 +793,7 @@
                               </Button>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="tavernPane" prefHeight="500.0" prefWidth="800.0" visible="false">
+                        <AnchorPane fx:id="tavernPane" prefHeight="500.0" prefWidth="800.0">
                            <children>
                               <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0">
                                  <graphic>
@@ -804,7 +804,7 @@
                                     </ImageView>
                                  </graphic>
                               </Label>
-                              <Button fx:id="innkeeperBtn" alignment="CENTER" cacheShape="false" centerShape="false" layoutX="113.0" layoutY="139.0" mnemonicParsing="false" onAction="#tavernPanel" onMouseEntered="#tavernPanelSpeak" opacity="0.0" prefHeight="176.0" prefWidth="109.0" scaleShape="false" text="innkeeperBtn">
+                              <Button fx:id="innkeeperBtn" alignment="CENTER" cacheShape="false" centerShape="false" layoutX="113.0" layoutY="139.0" mnemonicParsing="false" onAction="#tavernPanel" opacity="0.0" prefHeight="176.0" prefWidth="109.0" scaleShape="false" text="innkeeperBtn">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
