--- a/src/pixel_warriors/pixelwarriors.fxml
+++ b/src/pixel_warriors/pixelwarriors.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.image.Image?>
@@ -24,7 +25,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pixel_warriors.Controller">
+<VBox alignment="CENTER" minHeight="725.0" minWidth="800.0" prefHeight="725.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pixel_warriors.Controller">
    <children>
       <VBox alignment="CENTER" maxHeight="725.0" maxWidth="800.0" minHeight="725.0" minWidth="800.0" prefHeight="725.0" prefWidth="800.0">
          <children>
@@ -921,6 +922,93 @@
                               <Label alignment="CENTER" ellipsisString="" focusTraversable="false" layoutX="14.0" layoutY="452.0" text="Grupa 25INF-SP / B" textAlignment="CENTER">
                                  <font>
                                     <Font size="23.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="fightPane" prefHeight="200.0" prefWidth="200.0" visible="false">
+                           <children>
+                              <Label>
+                                 <graphic>
+                                    <ImageView fitHeight="500.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/background/Statystyki_tlo.gif" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Label>
+                              <Label layoutX="90.0" layoutY="92.0">
+                                 <graphic>
+                                    <ImageView fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/characters/Rycerz_nago_Gif.gif" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Label>
+                              <Label layoutX="550.0" layoutY="92.0" prefWidth="86.0">
+                                 <graphic>
+                                    <ImageView fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/characters/Przeciwnik3_Gif.gif" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Label>
+                              <Button fx:id="firstAtkBtn" layoutX="20.0" layoutY="450.0" maxHeight="40.0" maxWidth="100.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Szybki Atak">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="14.0" />
+                                 </font>
+                                 <effect>
+                                    <SepiaTone />
+                                 </effect></Button>
+                              <Button fx:id="secondAtkBtn" layoutX="130.0" layoutY="450.0" maxHeight="40.0" maxWidth="100.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Silny Atak">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="15.0" />
+                                 </font>
+                                 <effect>
+                                    <SepiaTone />
+                                 </effect></Button>
+                              <Button fx:id="surrBtn" layoutX="650.0" layoutY="450.0" maxHeight="40.0" maxWidth="144.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" onAction="#tavernPanel" prefHeight="40.0" prefWidth="144.0" text="Poddaj się">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="22.0" />
+                                 </font>
+                                 <effect>
+                                    <SepiaTone />
+                                 </effect></Button>
+                              <ProgressBar fx:id="playerHpProgress" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="90.0" layoutY="60.0" maxHeight="36.0" maxWidth="160.0" minHeight="30.0" minWidth="160.0" prefHeight="30.0" prefWidth="160.0" progress="1.0" scaleShape="false">
+                                 <effect>
+                                    <ColorAdjust hue="0.9" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="playerHP" layoutX="130.0" layoutY="63.0" text="100/100" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="21.0" />
+                                 </font>
+                              </Label>
+                              <ProgressBar fx:id="enemyHpProgress" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="550.0" layoutY="60.0" maxHeight="36.0" maxWidth="200.0" minHeight="30.0" minWidth="160.0" prefHeight="30.0" prefWidth="160.0" progress="1.0" scaleShape="false">
+                                 <effect>
+                                    <ColorAdjust hue="0.9" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="enemyHP" layoutX="593.0" layoutY="63.0" text="100/100" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="21.0" />
+                                 </font>
+                              </Label>
+                              <ProgressBar fx:id="staminaPlayer" layoutX="240.0" layoutY="465.0" prefHeight="25.0" prefWidth="211.0" progress="1.0">
+                                 <effect>
+                                    <ColorAdjust brightness="0.1" hue="-0.76" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="playerStamina" layoutX="305.0" layoutY="466.0" text="100/100" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="21.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="240.0" layoutY="447.0" text="Stamina:" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="18.0" />
                                  </font>
                               </Label>
                            </children>
