--- a/src/pixel_warriors/pixelwarriors.fxml
+++ b/src/pixel_warriors/pixelwarriors.fxml
@@ -939,7 +939,7 @@
                               </Label>
                               <Label layoutX="90.0" layoutY="92.0">
                                  <graphic>
-                                    <ImageView fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fx:id="playerImgView" fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@images/characters/Rycerz_nago_Gif.gif" />
                                        </image>
@@ -948,7 +948,7 @@
                               </Label>
                               <Label layoutX="550.0" layoutY="92.0" prefWidth="86.0">
                                  <graphic>
-                                    <ImageView fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fx:id="enemyImgView" fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@images/characters/Przeciwnik3_Gif.gif" />
                                        </image>
