--- a/src/pixel_warriors/pixelwarriors.fxml
+++ b/src/pixel_warriors/pixelwarriors.fxml
@@ -14,6 +14,8 @@
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.image.Image?>
@@ -24,7 +26,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pixel_warriors.Controller">
+<VBox alignment="CENTER" minHeight="725.0" minWidth="800.0" prefHeight="725.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pixel_warriors.Controller">
    <children>
       <VBox alignment="CENTER" maxHeight="725.0" maxWidth="800.0" minHeight="725.0" minWidth="800.0" prefHeight="725.0" prefWidth="800.0">
          <children>
@@ -236,7 +238,7 @@
                <center>
                   <StackPane minHeight="150.0" minWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <AnchorPane fx:id="banerPaneImage" prefHeight="500.0" prefWidth="800.0">
+                        <AnchorPane fx:id="banerPaneImage" prefHeight="500.0" prefWidth="800.0" visible="false">
                            <children>
                               <ImageView fitHeight="500.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -515,12 +517,12 @@
                                           <Glow />
                                        </effect>
                                     </Label>
-                                    <Label layoutX="32.0" layoutY="233.0" text="Stamina:" textFill="WHITE">
+                                    <Label layoutX="32.0" layoutY="233.0" text="Energia:" textFill="WHITE">
                                        <font>
                                           <Font name="Fixedsys Excelsior 3.01" size="30.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="staminaLabel" layoutX="294.0" layoutY="233.0" text="NULL" textFill="#ff00f9">
+                                    <Label fx:id="energyLable" layoutX="294.0" layoutY="233.0" text="NULL" textFill="#ff00f9">
                                        <font>
                                           <Font name="Fixedsys Excelsior 3.01" size="30.0" />
                                        </font>
@@ -790,7 +792,7 @@
                               </Button>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="tavernPane" prefHeight="500.0" prefWidth="800.0" visible="false">
+                        <AnchorPane fx:id="tavernPane" prefHeight="500.0" prefWidth="800.0">
                            <children>
                               <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0">
                                  <graphic>
@@ -800,6 +802,27 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                              </Label>
+                              <Label layoutX="76.0" layoutY="10.0" text="Stamina:" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="20.0" />
+                                 </font>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </Label>
+                              <ProgressBar fx:id="staminaBar" layoutX="158.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="485.0" progress="1.0">
+                                 <effect>
+                                    <ColorAdjust brightness="0.24" hue="-0.78" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="staminaLabel" layoutX="360.0" layoutY="10.0" text="100/100" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="22.0" />
+                                 </font>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
                               </Label>
                               <Button fx:id="innkeeperBtn" alignment="CENTER" cacheShape="false" centerShape="false" layoutX="113.0" layoutY="139.0" mnemonicParsing="false" onAction="#tavernPanel" opacity="0.0" prefHeight="176.0" prefWidth="109.0" scaleShape="false" text="innkeeperBtn">
                                  <cursor>
@@ -839,7 +862,10 @@
                                     <SepiaTone level="0.2" />
                                  </effect>
                               </Button>
-                           </children></AnchorPane>
+                           </children>
+                           <effect>
+                              <DropShadow />
+                           </effect></AnchorPane>
                         <AnchorPane fx:id="rankPane" prefHeight="500.0" prefWidth="800.0" visible="false">
                            <children>
                               <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0">
@@ -922,6 +948,105 @@
                                  <font>
                                     <Font size="23.0" />
                                  </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="fightPane" prefHeight="200.0" prefWidth="200.0" visible="false">
+                           <children>
+                              <Label>
+                                 <graphic>
+                                    <ImageView fitHeight="500.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/background/Statystyki_tlo.gif" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Label>
+                              <Label layoutX="90.0" layoutY="92.0">
+                                 <graphic>
+                                    <ImageView fx:id="playerImgView" fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/characters/Rycerz_nago_Gif.gif" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Label>
+                              <Label layoutX="550.0" layoutY="92.0" prefWidth="86.0">
+                                 <graphic>
+                                    <ImageView fx:id="enemyImgView" fitHeight="336.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/characters/Przeciwnik3_Gif.gif" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Label>
+                              <Button fx:id="firstAtkBtn" layoutX="20.0" layoutY="450.0" maxHeight="40.0" maxWidth="100.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Szybki Atak">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="14.0" />
+                                 </font>
+                                 <effect>
+                                    <SepiaTone />
+                                 </effect></Button>
+                              <Button fx:id="secondAtkBtn" layoutX="130.0" layoutY="450.0" maxHeight="40.0" maxWidth="100.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Silny Atak">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="15.0" />
+                                 </font>
+                                 <effect>
+                                    <SepiaTone />
+                                 </effect></Button>
+                              <Button fx:id="surrBtn" layoutX="708.0" layoutY="466.0" maxHeight="40.0" maxWidth="144.0" minHeight="24.0" minWidth="30.0" mnemonicParsing="false" onAction="#tavernPanel" prefHeight="24.0" prefWidth="86.0" text="Poddaj się">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="13.0" />
+                                 </font>
+                                 <effect>
+                                    <SepiaTone />
+                                 </effect></Button>
+                              <ProgressBar fx:id="playerHpProgress" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="90.0" layoutY="60.0" maxHeight="36.0" maxWidth="160.0" minHeight="30.0" minWidth="160.0" prefHeight="30.0" prefWidth="160.0" progress="1.0" scaleShape="false">
+                                 <effect>
+                                    <ColorAdjust hue="0.9" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="playerHP" layoutX="130.0" layoutY="63.0" text="100/100" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="21.0" />
+                                 </font>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </Label>
+                              <ProgressBar fx:id="enemyHpProgress" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="550.0" layoutY="60.0" maxHeight="36.0" maxWidth="200.0" minHeight="30.0" minWidth="160.0" prefHeight="30.0" prefWidth="160.0" progress="1.0" scaleShape="false">
+                                 <effect>
+                                    <ColorAdjust hue="0.9" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="enemyHP" layoutX="593.0" layoutY="63.0" text="100/100" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="21.0" />
+                                 </font>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </Label>
+                              <ProgressBar fx:id="energyPlayerProgress" layoutX="240.0" layoutY="465.0" prefHeight="25.0" prefWidth="211.0" progress="1.0">
+                                 <effect>
+                                    <ColorAdjust brightness="0.1" hue="0.05" />
+                                 </effect>
+                              </ProgressBar>
+                              <Label fx:id="playerEnergy" layoutX="305.0" layoutY="466.0" text="100/100" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="21.0" />
+                                 </font>
+                                 <effect>
+                                    <DropShadow blurType="ONE_PASS_BOX" />
+                                 </effect>
+                              </Label>
+                              <Label layoutX="240.0" layoutY="447.0" text="Energia:" textFill="WHITE">
+                                 <font>
+                                    <Font name="Fixedsys Excelsior 3.01" size="18.0" />
+                                 </font>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
                               </Label>
                            </children>
                         </AnchorPane>
