--- a/src/pixel_warriors/view/pixelwarriors.fxml
+++ b/src/pixel_warriors/view/pixelwarriors.fxml
@@ -1,32 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Point3D?>
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.effect.Blend?>
-<?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.effect.ColorAdjust?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.Glow?>
-<?import javafx.scene.effect.SepiaTone?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <VBox alignment="CENTER" minHeight="725.0" minWidth="800.0" prefHeight="725.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pixel_warriors.Controller">
     <children>
         <VBox alignment="CENTER" maxHeight="725.0" maxWidth="800.0" minHeight="725.0" minWidth="800.0" prefHeight="725.0" prefWidth="800.0">
@@ -1301,15 +1281,6 @@
                                     </ImageView>
                                  </graphic>
                               </Label>
-                              <Label fx:id="weaponAnimLabel" layoutX="220.0" layoutY="200.0" visible="false">
-                                 <graphic>
-                                    <ImageView fx:id="weaponAnimImg" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../images/weapons/Miecz1_Pusty_Gif.gif" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Label>
                               <Label fx:id="enemyWeaponLabel" layoutX="440.0" layoutY="200.0" rotate="-90.0" visible="false">
                                  <graphic>
                                     <ImageView fx:id="enemyWeaponImg" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
@@ -1470,6 +1441,44 @@
                                     </ImageView>
                                  </graphic>
                               </Label>
+                               <Label fx:id="weaponAnimLabel" layoutX="220.0" layoutY="200.0" visible="false">
+                                   <graphic>
+                                       <ImageView fx:id="weaponAnimImg" fitHeight="150.0" fitWidth="150.0"
+                                                  pickOnBounds="true" preserveRatio="true">
+                                           <image>
+                                               <Image url="@../images/weapons/Miecz1_Pusty_Gif.gif"/>
+                                           </image>
+                                       </ImageView>
+                                   </graphic>
+                               </Label>
+                               <Label fx:id="playerDMGIndi" layoutX="150.0" layoutY="245.0" text="NULL"
+                                      textAlignment="CENTER" textFill="RED" visible="false">
+                                   <font>
+                                       <Font name="Fixedsys Excelsior 3.01" size="36.0"/>
+                                   </font>
+                                   <effect>
+                                       <Glow>
+                                           <input>
+                                               <DropShadow blurType="GAUSSIAN" color="WHITE" height="2.8" radius="0.9"
+                                                           spread="1.0" width="2.8"/>
+                                           </input>
+                                       </Glow>
+                                   </effect>
+                               </Label>
+                               <Label fx:id="enemyDMGIndi" layoutX="610.0" layoutY="245.0" text="NULL"
+                                      textAlignment="CENTER" textFill="RED" visible="false">
+                                   <font>
+                                       <Font name="Fixedsys Excelsior 3.01" size="36.0"/>
+                                   </font>
+                                   <effect>
+                                       <Glow>
+                                           <input>
+                                               <DropShadow blurType="GAUSSIAN" color="WHITE" height="2.8" radius="0.9"
+                                                           spread="1.0" width="2.8"/>
+                                           </input>
+                                       </Glow>
+                                   </effect>
+                               </Label>
                            </children>
                         </AnchorPane>
                             </children>
